Add Elizabeth and Adrian to team and equipo pages

--- a/equipo.html
+++ b/equipo.html
@@ -102,12 +102,20 @@
 				</section>
 				<section class="wrap-mini container">
 					<div class="row">
-					<div class="sixcol center last">
+						<div class="sixcol center">
 							<article>
 								<img src="images/julian-david-duque.jpg" class="thumbs"/>
 								<h6>Julián Duque / Lead Instructor</h6>
-								<p>Developer by Passion, Engineer at Nodejitsu, Co-Organizer of MedellínJS and JSConf Colombia</p>
+								<p>Developer by Passion, Engineer at Nodejitsu, Co-Organizer of MedellínJS and JSConf Colombia.</p>
 								<p><a class="link" href="mailto:julianduquej@gmail.com">julianduquej@gmail.com</a></p>
+							</article>
+						</div>
+						<div class="sixcol center last">
+							<article>
+								<img src="images/adrian-estrada.jpg" class="thumbs"/>
+								<h6>Adrian Estrada / Instructor</h6>
+								<p>Seasoned developer with over of 12 years of experience with multiple programming languages, currently working as a senior developer at Wedlinkmedia, Co-Organizer of MedellínJS.</p>
+								<p><a class="link" href="mailto:edsadr@gmail.com">edsadr@gmail.com</a></p>
 							</article>
 						</div>
 					</div>
@@ -118,7 +126,7 @@
 							<article>
 								<img src="images/sandrazuniga.png" class="thumbs"/>
 								<h6>Sandra Zuniga Guzman - Community Manager / Directora de Comunidad</h6>
-								<p>I am an enterprising young 21-year-old with a love for raising human capital and a deep interest in social justice, politics, community engagement, international development, and social enterprise.</p>
+								<p>Sandra is an enterprising 23-year-old with a deep interest in social justice and community engagement. She has acted as a National Ambassador for the Youth Leadership Institute, is transitioning from Programs Director for the International Youth Council - USA chapter to Project Manager for the global organization, and supports  many efforts to champion youth-led development. She is pursuing an MA in International Relations at the Johns Hopkins Paul H. Nitze School of Advanced International Studies.</p>
 								<p><a class="link" href="mailto:sandra.zunigaguzman@gmail.com">sandra.zunigaguzman@gmail.com</a></p>
 							</article>
 						</div>
@@ -138,16 +146,8 @@
 							<article>
 								<img src="images/elizabeth_ramirez.png" class="thumbs"/>
 								<h6>Elizabeth Ramirez / Developer</h6>
-								<p>Ingeniera de Software para búsquedas, archivos y semántica de The New York Times. Trabajando en proyectos relacionados con el Aprendizaje Automático y el Procesamiento del Lenguaje Natural. Apasionada por la Física de Partículas y Computación Científica en Python.</p>
+								<p>Software Engineer for Search, Archive and Semantics at The New York Times. Working in projects related with Machine Learning and Natural Language Processing. Passionate about Particle Physics and Scientific Computing in Python.</p>
 								<p><a class="link" href="mailto:eramirem@gmail.com">eramirem@gmail.com</a></p>
-							</article>
-						</div>
-						<div class="sixcol center last">
-							<article>
-								<img src="images/adrian-estrada.jpg" class="thumbs"/>
-								<h6>Adrian Estrada / Instructor</h6>
-								<p>Sazonado desarrollador con más de 12 años de experiencia con múltiples lenguajes de programación, actualmente trabajando como desarrollador senior de Wedlinkmedia, Co-Organizador de MedellínJS.</p>
-								<p><a class="link" href="mailto:edsadr@gmail.com">edsadr@gmail.com</a></p>
 							</article>
 						</div>
 					</div>
