--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
 								<a href="#"><img src="images/vivelab.png" width"200" height="30"/></a>
 							</div>
 						</div>
+						<div class="slogo">
+							<div class="threecol">
+								<a href="http://tooeasygroup.com/"><img src="images/tooeasy.png" width"200" height="30"/></a>
+							</div>
+						</div>
 					</div>
 				</section>
 			</section>
