--- a/index-es.html
+++ b/index-es.html
@@ -136,26 +136,28 @@
 				</section>
 				<section id="sponsors" class="wrap container">
 					<div class="row">
-						<h3>Nuestros patrocinadores 2012</h3>
-						<div class="slogo">
-							<div class="threecol">
-								<a href="http://socialatomgroup.com/"><img src="images/socialatom.png" width"200" height="30"/></a>
-							</div>
-							<div class="threecol">
-								<a href="http://www.intergrupo.com/"><img src="images/intergrupo.png" width"214" height="55"/></a>
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<h3>Nuestros patrocinadores 2014</h3>
-						<div class="slogo">
-							<div class="threecol">
-								<a href="#"><img src="images/vivelab.png" width"200" height="30"/></a>
+						<div class="sixcol">
+							<h3>Nuestros patrocinadores 2012</h3>
+							<div class="slogo">
+								<div class="fivecol">
+									<a href="http://socialatomgroup.com/"><img src="images/socialatom.png" width"200" height="30"/></a>
+								</div>
+								<div class="fivecol">
+									<a href="http://www.intergrupo.com/"><img src="images/intergrupo.png" width"214" height="55"/></a>
+								</div>
 							</div>
 						</div>
-						<div class="slogo">
-							<div class="threecol">
-								<a href="http://tooeasygroup.com/"><img src="images/tooeasy.png" width"200" height="30"/></a>
+						<div class="sixcol last">
+							<h3>Nuestros patrocinadores 2014</h3>
+							<div class="slogo">
+								<div class="fivecol">
+									<a href="#"><img src="images/vivelab.png" width"200" height="30"/></a>
+								</div>
+							</div>
+							<div class="slogo">
+								<div class="fivecol">
+									<a href="http://tooeasygroup.com/"><img src="images/tooeasy.png" width"200" height="30"/></a>
+								</div>
 							</div>
 						</div>
 					</div>
