Change Catherine email

--- a/team.html
+++ b/team.html
@@ -94,7 +94,7 @@
 								<p>I am a passionate person who takes on each project with full dedication and professionalism. I am good working with little direction, as long as there is a goal. I consider myself resourceful, strategic and focused, with great communication skills.
 								<br/>
 								Most of my experience has been within startup environments where the need for a person with the ability and willingness to execute in different areas is a must have.</p>
-								<p><a class="link" href="mailto:lopez.catherine@gmail.com">lopez.catherine@gmail.com</a></p>
+								<p><a class="link" href="mailto:c@coderise.org">c@coderise.org</a></p>
 							</article>
 						</div>
 						<div class="sixcol last center">
