Comment hiring message

--- a/team.html
+++ b/team.html
@@ -58,13 +58,14 @@
 						<h2 class="twelvecol title">Our Team</h2>
 					</div>
 				</section>
+				<!--
 				<a href="#hiring">
 					<section class="wrap-mini wrap-gray container buttonHiring" style="background-color: #E2E8E8;padding: 10px 0px;">
 						<div class="row">
 							<h2 class="twelvecol title" style="font-size: 18px; text-align: center;">Now hiring a Managing Director</h2>
 						</div>
 					</section>
-                </a>
+                		</a> -->
 				<section class="wrap-mini container">
 					<div class="row">
 						<div class="sixcol center">
@@ -159,7 +160,7 @@
 						</div>
 					</div>
 				</section>
-				<section class="wrap-mini container" id="hiring">
+				<!--<section class="wrap-mini container" id="hiring">
                     <div class="row">
                         <div style="padding-bottom: 30px;"><hr style="background-color: #f2f2f2; height: 3px;"></div>
                         <div class="twelvecol hiringInfo">
@@ -241,7 +242,7 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section>-->
 			</section>
 			<footer class="wrap-mini wrap-navy">
 				<div class="row">
