Comment hiring message

--- a/equipo.html
+++ b/equipo.html
@@ -53,11 +53,11 @@
 				</div>	
 			</header>
 			<section id="team" role="content">
-				<section class="wrap-mini wrap-gray container">
+				<!--<section class="wrap-mini wrap-gray container">
 					<div class="row">
 						<h2 class="twelvecol title">Equipo Coderise</h2>
 					</div>
-				</section>
+				</section>-->
 				<section class="wrap-mini container">
 					<div class="row">
 						<div class="sixcol center">
