--- a/index-es.html
+++ b/index-es.html
@@ -136,7 +136,7 @@
 				</section>
 				<section id="sponsors" class="wrap container">
 					<div class="row">
-						<h3>Our Supporters 2012</h3>
+						<h3>Nuestros patrocinadores 2012</h3>
 						<div class="slogo">
 							<div class="threecol">
 								<a href="http://socialatomgroup.com/"><img src="images/socialatom.png" width"200" height="30"/></a>
@@ -147,7 +147,7 @@
 						</div>
 					</div>
 					<div class="row">
-						<h3>Our Supporters 2014</h3>
+						<h3>Nuestros patrocinadores 2014</h3>
 						<div class="slogo">
 							<div class="threecol">
 								<a href="http://socialatomgroup.com/"><img src="images/socialatom.png" width"200" height="30"/></a>
