--- a/aplica.html
+++ b/aplica.html
@@ -42,12 +42,12 @@
 									</a>
 									<ul>
 										<li><a href="prensa.html">Cubrimiento</a></li>
-										<!--
-										<li><a href="https://support.coderise.org">Comunicados</a></li>
-										-->
+										<li><a href="comunicados.html">Comunicados</a></li>
 									</ul>
 								</li>
+								<!--
 								<li><a href="apoya.html">Apoya</a></li>
+								-->
 								<li class="last active"><a href="aplica.html">Aplica</a></li>
 							</ul>
 						</nav>
